--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,10 @@ body {
 header {
     flex: 1 20%;
 }
+.navbar {
+    position: sticky;
+    top: 0;
+}
 .btn {
     background-color: #1da1f2;
     width: 170px;
